# the-media-organizer

./: Cargo.toml  LICENSE  README.md  photo-organizer.toml
.github/workflows/: ci.yml  publish.yml
src/: config.rs  date.rs  directory.rs  lib.rs  main.rs  organizer.rs
src/fixtures/: config.toml
src/organizer/: photos.rs  videos.rs
